--- a/app/index.html
+++ b/app/index.html
@@ -11,14 +11,18 @@
 
     <link rel="stylesheet" href="assets/vendor.css">
     <link rel="stylesheet" href="assets/busted.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
 
     {{content-for "head-footer"}}
   </head>
   <body>
     {{content-for "body"}}
 
+
     <script src="assets/vendor.js"></script>
     <script src="assets/busted.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" crossorigin="anonymous"></script>
 
     {{content-for "body-footer"}}
   </body>
